Add traffic light and crossroad systems; implement red light violation detection and HUD display for red lights

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="hud-label">🚶 AVOIDED</div>
         <div class="hud-value" id="pedestriansAvoided">0</div>
       </div>
+      <div class="hud-item traffic-counter">
+        <div class="hud-label">🚦 RED LIGHTS</div>
+        <div class="hud-value" id="redLightsRan">0</div>
+      </div>
       <div class="hud-item">
         <div class="hud-label">DISTANCE</div>
         <div class="hud-value" id="distance">0</div>
@@ -64,7 +68,8 @@
         <strong>← →</strong> Steer Left/Right<br>
         <strong>↑</strong> Accelerate<br>
         <strong>↓</strong> Brake<br>
-        <strong style="color: #ff6b6b;">⚠️ Watch out for pedestrians!</strong>
+        <strong style="color: #ff6b6b;">⚠️ Watch out for pedestrians!</strong><br>
+        <strong style="color: #ffaa00;">🚦 Stop at red lights!</strong>
       </div>
     </div>
 
